k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  namespace: fullstack-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend 
    spec:
      containers:
        - name: frontend-cont
          image: roshan03ish/chatapp-frontend:latest
          ports:
            - containerPort: 80
          env:   # ✅ must be indented to align with ports
            - name: NODE_ENV
              value: "production"
