k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-deployment
  namespace: fullstack-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-cont
          image: mongo:latest
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
