k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fullstack-chatapp
spec:
  selector:
    app: backend-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: LoadBalancer
